# HandGestureUserStudy

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  Helpers.hpp  LeapMotionGestureProvider.cpp  LeapMotionGestureProvider.hpp  README.md  SimulatedMouse.cpp  SimulatedMouse.hpp  process.py  raylib-depolluted.h  run.ps1  window.cpp
Debug/: LeapDebug.cpp  LeapDebug.hpp  RaylibDebug.cpp  RaylibDebug.hpp
HTML/: HTMLTemplate.cpp  HTMLTemplate.hpp
HTMLTemplates/: emailTemplate.html  emailTemplateTutorial.html  endPage.html  formTemplate.html  formTemplateTutorial.html  instructionsPage.html  postTutorial.html  startPage.html  test.txt  tutorialPage.html
Helpers/: Expected.hpp  HTTPHelpers.hpp  IsAnyOf.hpp  JSONEvents.cpp  JSONEvents.hpp  LeapConnection.cpp  LeapConnection.hpp  MathHelpers.hpp  SSE.cpp  SSE.hpp  StringPools.hpp  StudyData.hpp  UserIDLock.cpp  UserIDLock.hpp  Vector3Common.cpp  Vector3Common.hpp
Input/: LeapConnection.cpp  LeapConnection.hpp  LeapMotionGestureProvider.cpp  LeapMotionGestureProvider.hpp  SimulatedMouse.cpp  SimulatedMouse.hpp
Math/: MathHelpers.cpp  MathHelpers.hpp  Vector3Common.cpp  Vector3Common.hpp
Models/: SOURCES.txt  leap.glb
Programs/: GestureDriver.cpp  HttpServer.cpp  HttpServer.hpp  LeapDriver.cpp  LeapDriver.hpp  ThreadingTest.cpp  Visualizer.cpp  Visualizer.hpp
Programs/Testing/: LoggerTest.cpp  SSEReliabilityTest.cpp  TemplatingTest.cpp
Programs/UserStudy/: CursorLogger.cpp  CursorLogger.hpp  HttpServer.cpp  HttpServer.hpp  LeapDriver.cpp  LeapDriver.hpp  Logging.cpp  Logging.hpp  Main.cpp  SyncState.hpp  ThreadingTest.cpp  Visualizer.cpp  Visualizer.hpp
Tests/: CppHttplibTest.cpp  VirtualMouseTest.cpp
Visualization/: RaylibVisuals.cpp  RaylibVisuals.hpp
www/: callbacks.js  callbacks_tutorial.js  clicks.js  disableTabNavigation.js  emailTemplate.html  end.js  formTemplate.html  forms.css  instructions.js  keystrokes.js  notifyDeviceModal.js  sse.js  start.js  test.html  tutorial.js  tutorialPage.html
